# home_coverage_ros

./: CMakeLists.txt  package.xml
action/: CoveragePlanner.action
launch/: path_coverage.launch
msg/: HighValueTarget.msg
scripts/: boustrophedon_decomposition.rb  coverage_planner_node.py  coverage_planner_server.py  hvt_database_node.py  path_coverage_node.py
scripts/common/: common.py  trapezoidal_coverage.py
srv/: HvtInfoAdd.srv  HvtInfoDel.srv  HvtInfoGet.srv  SearchPolygon.srv  StdDataType.srv  TargetObject.srv
